[package]
name = "asynk-hyper"
description = "Hyper integration with asynk runtime"
version = "0.1.1"
authors = ["Bells307"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bells307/asynk-rt.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asynk = { path = "../asynk", version = "0.1.2" }

hyper = { version = "1.2.0", features = ["server", "http1", "http2"] }
futures = "0.3.30"
http-body-util = "0.1.1"
